--- a/css/main.css
+++ b/css/main.css
@@ -650,6 +650,7 @@ img {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   outline: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-modal:focus {
   border: 1px solid var(--accent-color);
@@ -669,6 +670,7 @@ img {
 
 .mod-svg {
   align-self: center;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mod-svg:hover, .mod-svg:focus {
   fill: var(--accent-color);
@@ -755,6 +757,7 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus {
   border: 1px solid var(--accent-color);
@@ -778,6 +781,7 @@ img {
   border-radius: 4px;
   outline: none;
   resize: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-text:focus {
   border: 1px solid var(--accent-color);
@@ -808,6 +812,7 @@ img {
   border-radius: 2px;
   cursor: pointer;
   margin-right: 7px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .checkbox:checked + .checkbox-pict {
   border-color: var(--accent-color);
@@ -923,7 +928,8 @@ img {
   padding-top: 10px;
   padding-bottom: 48px;
   background-color: #ffffff;
-  transform: translateY(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0) scale(1);
 }
 @media screen and (min-width: 768px) {
   .mob-menu {
@@ -932,7 +938,7 @@ img {
 }
 
 .mob-menu.is-hidden {
-  transform: translateY(100%);
+  transform: translateY(100%) scale(0.1);
 }
 
 .mob-cotainer {
