--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -39,6 +39,7 @@
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   outline: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:focus {
     border: 1px solid var(--accent-color);
@@ -55,6 +56,7 @@
 
 .mod-svg {
   align-self: center;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     fill: var(--accent-color);
@@ -138,6 +140,7 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus {
     border: 1px solid var(--accent-color);
   }
@@ -158,6 +161,7 @@
   border-radius: 4px;
   outline: none;
   resize: none;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus {
     border: 1px solid var(--accent-color);
   }
@@ -185,6 +189,7 @@
   border-radius: 2px;
   cursor: pointer;
   margin-right: 7px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .checkbox:checked + & {
     border-color: var(--accent-color);
     background-color: var(--accent-color);
