--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -26,14 +26,17 @@
   padding-top: 10px;
   padding-bottom: 48px;
   background-color: #ffffff;
-  transform: translateY(0);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transform: translateY(0) scale(1);
   @media screen and (min-width: 768px) {
     display: none;
   }
 }
 
 .mob-menu.is-hidden {
-  transform: translateY(100%);
+  transform: translateY(100%) scale(0.1);
 }
 
 .mob-cotainer {
